--- a/plugins/metrics-node/package.json
+++ b/plugins/metrics-node/package.json
@@ -31,6 +31,9 @@
   ],
   "dependencies": {
     "@backstage/backend-plugin-api": "^1.4.0",
-    "@opentelemetry/api": "^1.9.0"
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-metrics": "^2.0.1",
+    "@opentelemetry/semantic-conventions": "^1.34.0"
   }
 }
